force-app/main/default/objects/LinkedIn_Account_Setting__c/LinkedIn_Account_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LinkedIn Account Setting</label>
</CustomObject>