force-app/main/default/objects/LinkedIn_Account_Setting__c/fields/Access_Token_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Part_1__c</fullName>
    <label>Access Token Part 1</label>
    <type>TextArea</type>
</CustomField>