force-app/main/default/objects/LinkedIn_Account_Setting__c/fields/Access_Token_Part_2__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Part_2__c</fullName>
    <label>Access Token Part 2</label>
    <type>TextArea</type>
</CustomField>