force-app/main/default/objects/LinkedIn_Account_Setting__c/fields/LinkedIn_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Sub_ID__c</fullName>
    <label>LinkedIn Sub ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>