force-app/main/default/objects/LinkedIn_Account_Setting__c/fields/Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry__c</fullName>
    <label>Token Expiry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>